--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
         <meta charset="utf-8">        
         <title>Logan Marshall: Developer</title>
         <meta name="viewport" content="initial-scale = 1.0, maximum-scale = 1.0" />
-        <link rel="stylesheet" type="text/css" href="style.css"> 
+        <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="shortcut icon" type="image/x-icon" href="favicon.ico"> 
         <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300|Lato|Merriweather:400,700|PT+Serif:400,700' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="hover.css">
